profilelist1exp/unpackaged/objects/Premier_Pages__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Premier Pages</relationshipLabel>
        <relationshipName>Premier_Pages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Description__c</fullName>
        <label>Action Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Type__c</fullName>
        <label>Configuration Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premier_Page_Name__c</fullName>
        <label>Premier Page Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Premier Pages</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Premier Pages ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Premier Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>